 - Reverted changes to the ServerServlet back to the 1.0.2 behavior (application context set after construction 
   via setContext() method). The new behavior requires NRE API changes and will only be available in the 
   Restlet 1.1. Issue reported by Richard Wallace. 
 - Mentionned the additional dependency on the cglib in the SpringRouter class.
 
1.0.3 (2007-07-15)
[Bugs fixed]
 - Fixed Javadoc issue in Reference.setQuery. Reported by Avi Flax.
 - Fixed bug with the nsis ant task that requires the path to the 
   "makensis" executable with NSIS 2.28.
 - Clarified Javadocs for Directory about the modification mode. Suggested by Chuck Hinson.
 - Clarified Javadocs for OutputRepresentation. Suggested by Jon Lachelt.
 - Fixed potential NPE in DomRepresentation.write() method. Reported by Dan Fitzgerald.
 - The ServletContextAdapter passed by the ServerServlet to the Restlet's Application was
   not given to the constructor but via the setContext() method. Reported by Tammy Croteau.
 - Fixed bug in StreamClientCall which wasn't passing the query parameters in the request URI.
   Reported by Michael Terrington.
 - Removed unwanted exposing of internal HTTP client and server connector, introduced
   in version 1.0.2. Those connectors are experimental and not ready for public usage.

[Enhancements] 
 - Clean up of all the project to support Eclipse 3.3.
 - Removal of all development code not part of the Restlet 1.0 distribution like Grizzly, JXTA
   and JMX. This code is now maintained in the SVN trunk.

1.0.2 (2007-06-20)
[Bugs fixed]
 - The Component was not correctly detecting the connectors necessary for the
   attached applications, resulting in invalid log messages. Reported by Yuri de Wit.
 - If NRE's HttpRequest.setEntity() method is invoked before the first getEntity() call,
   subsequent getEntity() calls now return the entity set. Reported by Jonathan Hall.
 - Fixed potential NPE with null passwords in ChallengeResponse. Reported by Yuri de Wit.