@@ -106,7 +106,7 @@ public class Part11 {
         };
 
         // Attach the application to the component and start it
-        component.getDefaultHost().attach("", application);
+        component.getDefaultHost().attach(application);
         component.start();
     }
 
