@@ -15,6 +15,8 @@ Changes log
    via setContext() method). The new behavior requires NRE API changes and will only be available in the 
    Restlet 1.1. Issue reported by Richard Wallace. 
  - Mentionned the additional dependency on the cglib in the SpringRouter class.
+ - Clarified and fixed SpringContext Javadocs.
+ - Restlet.getContext() now always return a non-null context.
  
 1.0.3 (2007-07-15)
 [Bugs fixed]
